--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,36 +1,36 @@
 version: 2
 updates:
   # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     commit-message:
-      prefix: "GHA"
+      prefix: 'GHA'
 
   # Maintain dependencies for docker
-  - package-ecosystem: "docker"
-    directory: "/"
+  - package-ecosystem: 'docker'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     commit-message:
-      prefix: "docker"
+      prefix: 'docker'
 
   # Maintain dependencies for go
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: 'gomod'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     commit-message:
-      prefix: "gomod"
+      prefix: 'gomod'
 
   # Maintain dependencies for php
-  - package-ecosystem: "composer"
-    directory: "/"
+  - package-ecosystem: 'composer'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     commit-message:
-      prefix: "php"
+      prefix: 'php'
 
   # Maintain dependencies for npm
   - package-ecosystem: 'npm'
